Update change fragment in Welcome!

--- a/USTHConnect/app/src/main/res/layout/fragment_welcome.xml
+++ b/USTHConnect/app/src/main/res/layout/fragment_welcome.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:orientation="vertical"
+    android:id="@+id/welcome_fragment_page"
     tools:context=".StudyBuddy.Welcome.WelcomeFragment">
 
     <!-- Header -->
