--- a/USTHConnect/app/src/main/res/layout/activity_study_buddy.xml
+++ b/USTHConnect/app/src/main/res/layout/activity_study_buddy.xml
@@ -30,21 +30,12 @@
 
         </RelativeLayout>
 
-        <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:elevation="4dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
         <!-- ViewPager2 -->
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/view_study_buddy_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@+id/study_buddy_bottom_navigation"/>
+            android:layout_above="@+id/study_buddy_bottom_navigation" />
 
         <!-- BottomNavigation -->
         <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -56,7 +47,8 @@
             android:background="@color/navigator_background"
             app:itemIconTint="@color/home_navigator"
             app:itemTextColor="@color/home_navigator"
-            app:menu="@menu/sb_menu"/>
+            app:menu="@menu/sb_menu" />
+
     </RelativeLayout>
 
     <!--- Navigation -->
@@ -93,18 +85,18 @@
                             android:layout_width="55dp"
                             android:layout_height="55dp"
                             android:background="@drawable/user"
-                            android:scaleType="centerCrop"/>
+                            android:scaleType="centerCrop" />
 
                     </androidx.cardview.widget.CardView>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
                         android:text="Hi, User"
                         android:textColor="@color/white"
-                        android:textSize="20sp"
-                        android:gravity="center"
-                        android:layout_marginTop="10dp"/>
+                        android:textSize="20sp" />
 
                 </LinearLayout>
 
@@ -112,8 +104,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:background="@color/navigator_drawer_task_background">
+                    android:background="@color/navigator_drawer_task_background"
+                    android:orientation="vertical">
 
                     <LinearLayout
                         android:id="@+id/to_home_page"
@@ -125,23 +117,23 @@
                             android:layout_width="25dp"
                             android:layout_height="25dp"
                             android:layout_gravity="center_vertical"
-                            android:src="@drawable/home"
-                            android:layout_marginLeft="25dp"/>
+                            android:layout_marginLeft="25dp"
+                            android:src="@drawable/home" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:gravity="center"
                             android:text="Home"
                             android:textColor="@color/black"
-                            android:textSize="20sp"
-                            android:gravity="center"/>
+                            android:textSize="20sp" />
 
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="@color/black"/>
+                        android:background="@color/black" />
 
                     <LinearLayout
                         android:id="@+id/to_schedule_page"
@@ -153,23 +145,23 @@
                             android:layout_width="25dp"
                             android:layout_height="25dp"
                             android:layout_gravity="center_vertical"
-                            android:src="@drawable/calender"
-                            android:layout_marginLeft="25dp"/>
+                            android:layout_marginLeft="25dp"
+                            android:src="@drawable/calender" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:gravity="center"
                             android:text="Schedule"
                             android:textColor="@color/black"
-                            android:textSize="20sp"
-                            android:gravity="center"/>
+                            android:textSize="20sp" />
 
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="@color/black"/>
+                        android:background="@color/black" />
 
                     <LinearLayout
                         android:id="@+id/to_map_page"
@@ -181,23 +173,23 @@
                             android:layout_width="25dp"
                             android:layout_height="25dp"
                             android:layout_gravity="center_vertical"
-                            android:src="@drawable/map"
-                            android:layout_marginLeft="25dp"/>
+                            android:layout_marginLeft="25dp"
+                            android:src="@drawable/map" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:gravity="center"
                             android:text="Campus"
                             android:textColor="@color/black"
-                            android:textSize="20sp"
-                            android:gravity="center"/>
+                            android:textSize="20sp" />
 
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="@color/black"/>
+                        android:background="@color/black" />
 
                     <LinearLayout
                         android:id="@+id/to_resource_page"
@@ -209,23 +201,23 @@
                             android:layout_width="25dp"
                             android:layout_height="25dp"
                             android:layout_gravity="center_vertical"
-                            android:src="@drawable/resource"
-                            android:layout_marginLeft="25dp"/>
+                            android:layout_marginLeft="25dp"
+                            android:src="@drawable/resource" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:gravity="center"
                             android:text="Resource"
                             android:textColor="@color/black"
-                            android:textSize="20sp"
-                            android:gravity="center"/>
+                            android:textSize="20sp" />
 
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="@color/black"/>
+                        android:background="@color/black" />
 
                     <LinearLayout
                         android:id="@+id/to_study_page"
@@ -237,23 +229,23 @@
                             android:layout_width="25dp"
                             android:layout_height="25dp"
                             android:layout_gravity="center_vertical"
-                            android:src="@drawable/study_buddy"
-                            android:layout_marginLeft="25dp"/>
+                            android:layout_marginLeft="25dp"
+                            android:src="@drawable/study_buddy" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:gravity="center"
                             android:text="Study Buddy"
                             android:textColor="@color/black"
-                            android:textSize="20sp"
-                            android:gravity="center"/>
+                            android:textSize="20sp" />
 
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="@color/black"/>
+                        android:background="@color/black" />
 
                     <LinearLayout
                         android:id="@+id/to_log_out"
@@ -265,23 +257,23 @@
                             android:layout_width="25dp"
                             android:layout_height="25dp"
                             android:layout_gravity="center_vertical"
-                            android:src="@drawable/log_out"
-                            android:layout_marginLeft="25dp"/>
+                            android:layout_marginLeft="25dp"
+                            android:src="@drawable/log_out" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:gravity="center"
                             android:text="Log out"
                             android:textColor="@color/black"
-                            android:textSize="20sp"
-                            android:gravity="center"/>
+                            android:textSize="20sp" />
 
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="@color/black"/>
+                        android:background="@color/black" />
 
                 </LinearLayout>
 
