--- a/Calling_App/app/src/main/res/layout/fragment_register.xml
+++ b/Calling_App/app/src/main/res/layout/fragment_register.xml
@@ -50,6 +50,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <TextView
+            android:onClick="@{openSubscribeWebPageClickListener}"
+            android:id="@+id/create_email_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:text="Register your call account"
+            android:textSize="13sp"
+            android:gravity="center"
+            android:background="@drawable/rounded_border"/>
+
     </LinearLayout>
 
 </LinearLayout>
